# contact-finder

./: README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: .env.example  NimbleContacts.csv  alembic.ini  importer.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/contact/: crud.py  schema.py  view.py
src/core/: __init__.py  config.py  taskiq_broker.py
src/core/alembic/: env.py
src/core/alembic/versions/: 2025_10_13_0312-f14b00edd00c_create_contacts_table.py  2025_10_14_2137-60cc6abf9ded_added_nimble_id_column_and_nullable_.py
src/core/models/: __init__.py  contact.py  db_helper.py
src/tasks/: __init__.py  cron_contact_update.py  depends.py
src/utils/: importer.py
tests/: conftest.py
tests/api/: test_contacts_view.py  test_cron_contacts_update_task.py
tests/integration/: test_contacts_crud.py  test_db_helper.py
tests/unit/: test_cron_contact_update.py
